Finalização do app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,23 @@
         android:textSize="20dp" />
 
     <Button
+        android:id="@+id/btnEdit"
+        android:layout_gravity="right"
+        android:layout_marginRight="18dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Editar" />
+
+    <Button
+        android:id="@+id/btnDelete"
+        android:layout_gravity="right"
+        android:layout_marginRight="18dp"
+        android:layout_marginTop="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Deletar" />
+
+    <Button
         android:id="@+id/btnNext"
         style="@style/AppTheme.RoundedCornerMaterialButton"
         android:layout_width="50dp"
